Addfirst section of the content

--- a/index.html
+++ b/index.html
@@ -23,6 +23,19 @@
         <div>add a link for an img </div>
 
     </div>
+    <div class="content">
+        <div class="section-one">
+            <div>Some random information.</div>
+            <div class="images">add images, small ones with an equal height and width</div>
+            <div class="subtext">
+                <p>text</p>
+                <p>text</p>
+                <p>text</p>
+                <p>text</p>
+            </div>
+        </div>
+
+    </div>
     
 </body>
 </html>
