--- a/index.html
+++ b/index.html
@@ -27,13 +27,29 @@
         <div class="section-one">
             <div>Some random information.</div>
             <div class="images">add images, small ones with an equal height and width</div>
-            <div class="subtext">
-                <p>text</p>
-                <p>text</p>
-                <p>text</p>
-                <p>text</p>
-            </div>
+            <ul>
+                <li>a</li>
+                <li>b</li>
+                <li>c</li>
+                <li>d</li>
+
+            </ul>
         </div>
+        <div class="section-two">
+            Never give up on something that you can't go a day without thinking about.
+            <div>Winston Churchill</div>
+        </div>
+        <div class="section-three">
+            <div>
+                <div>
+                    <div>Call to action! It's</div>
+                    <div>Sign up by clicking that button</div>
+                    <button>Sign up</button>
+                </div>
+            </div>
+
+        </div>
+
 
     </div>
     
