--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
             </div>
 
         </div>
-
-
-    </div>
-    
+        <div class="footer">
+            Copyright logo The Odin Project 2022
+        </div>
+    </div>  
 </body>
 </html>
