style the header

--- a/index.html
+++ b/index.html
@@ -9,19 +9,24 @@
 </head>
 <body>
     <div class="header">
-        <ul>
-            <li>header logo</li>
-            <li><a href="#">one</a></li>
-            <li><a href="#">two</a></li>
-            <li><a href="#">three</a></li>
-        </ul>
-        <div>
-            <h1>This website is awesome</h1>
-            <p>write an intro or tell the visitors an information about your page</p>
-            <button>Sign up</button>
+        <div class="center">
+            <div class="top">
+                <div class="logo">header logo</div>
+                <ul>
+                    <li><a href="#">one</a></li>
+                    <li><a href="#">two</a></li>
+                    <li><a href="#">three</a></li>
+                </ul>
+            </div>
+            <div class="bottom">
+                <div>
+                    <div class="heading">This website is awesome</div>
+                    <div class="text">write an intro or tell the visitors an information about your page</div>
+                    <button>Sign up</button>
+                </div>
+                <div class="img"><img src="old man.jpg" alt="old"> </div>
+            </div>
         </div>
-        <div>add a link for an img </div>
-
     </div>
     <div class="content">
         <div class="section-one">
