--- a/index.html
+++ b/index.html
@@ -20,43 +20,50 @@
             </div>
             <div class="bottom">
                 <div>
-                    <div class="heading">This website is awesome</div>
+                    <div class="hero">This website is awesome</div>
                     <div class="text">write an intro or tell the visitors an information about your page</div>
                     <button>Sign up</button>
                 </div>
-                <div class="img"><img src="old man.jpg" alt="old"> </div>
+                <div class="image-one"><img src="old man.jpg" alt="old"> </div>
             </div>
         </div>
     </div>
     <div class="content">
-        <div class="section-one">
-            <div>Some random information.</div>
-            <div class="images">add images, small ones with an equal height and width</div>
-            <ul>
-                <li>a</li>
-                <li>b</li>
-                <li>c</li>
-                <li>d</li>
+        <div class="center">
+            <div class="section-one">
+                <div class="heading">Some random information.</div>
+                <div class="images-text">
+                    <div><img class="image-two" src="Caravan.jpg" alt="Caravan"></div>
+                    <div><img class="image-two" src="Caravan.jpg" alt="Caravan"></div>
+                    <div><img class="image-two" src="Caravan.jpg" alt="Caravan"></div>
+                    <div><img class="image-two" src="Caravan.jpg" alt="Caravan"></div>
 
-            </ul>
-        </div>
-        <div class="section-two">
-            Never give up on something that you can't go a day without thinking about.
-            <div>Winston Churchill</div>
-        </div>
-        <div class="section-three">
-            <div>
-                <div>
-                    <div>Call to action! It's</div>
-                    <div>Sign up by clicking that button</div>
-                    <button>Sign up</button>
+                </div>
+                <div class="images-text">
+                    <div class="subtext">this is some subtext under an illustration or image</div>
+                    <div class="subtext">this is some subtext under an illustration or image</div>
+                    <div class="subtext">this is some subtext under an illustration or image</div>
+                    <div class="subtext">this is some subtext under an illustration or image</div>
                 </div>
             </div>
+            <div class="section-two">
+                <div class="quote"> Never give up on something that you can't go a day without thinking about.</div>
+                <div class="perso">Winston Churchill</div>
+            </div>
+            <div class="section-three">
+                <div>
+                    <div>
+                        <div>Call to action! It's</div>
+                        <div>Sign up by clicking that button</div>
+                    </div>
+                    <div><button>Sign up</button></div>
+                </div>
 
+            </div>
         </div>
-        <div class="footer">
-            Copyright logo The Odin Project 2022
-        </div>
+    </div>
+    <div class="footer">
+        Copyright logo The Odin Project 2022
     </div>  
 </body>
 </html>
