style section 3 & the footer

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div>
                     <div class="hero">This website is awesome</div>
                     <div class="text">write an intro or tell the visitors an information about your page</div>
-                    <button>Sign up</button>
+                    <button class="button">Sign up</button>
                 </div>
                 <div class="image-one"><img src="old man.jpg" alt="old"> </div>
             </div>
@@ -51,12 +51,12 @@
                 <div class="perso">Winston Churchill</div>
             </div>
             <div class="section-three">
-                <div>
+                <div class="card">
                     <div>
-                        <div>Call to action! It's</div>
+                        <div>Call to action! It's time!</div>
                         <div>Sign up by clicking that button</div>
                     </div>
-                    <div><button>Sign up</button></div>
+                    <div><button class="button">Sign up</button></div>
                 </div>
 
             </div>
