style the header and section 3

--- a/index.html
+++ b/index.html
@@ -11,18 +11,21 @@
     <div class="header">
         <div class="center">
             <div class="top">
-                <div class="logo">header logo</div>
+                <div class="logo">AID</div>
                 <ul>
-                    <li><a href="#">one</a></li>
-                    <li><a href="#">two</a></li>
-                    <li><a href="#">three</a></li>
+                    <li><a href="#">About us</a></li>
+                    <li><a href="#">Community</a></li>
+                    <li><a href="#">Contact us</a></li>
                 </ul>
             </div>
             <div class="bottom">
-                <div>
-                    <div class="hero">This website is awesome</div>
-                    <div class="text">write an intro or tell the visitors an information about your page</div>
-                    <button class="button">Sign up</button>
+                <div class="align">
+                    <div class="hero">Togather we can stop their suffering!</div>
+                    <div class="text">Aid is a charity dedicated to help old homeless people.
+                        We simply extract them from the streets and help them  live their last years in some dignity.
+                        <a href="#">For more details!</a>
+                    </div>
+                    <div class="text">Join our community by signing up here! <button class="button">Sign up</button></div>
                 </div>
                 <div class="image-one"><img src="old man.jpg" alt="old"> </div>
             </div>
@@ -53,10 +56,10 @@
             <div class="section-three">
                 <div class="card">
                     <div>
-                        <div>Call to action! It's time!</div>
-                        <div>Sign up by clicking that button</div>
+                        <div>Call to action! It's time to make them happy!</div>
+                        <div>Donate by clicking that button</div>
                     </div>
-                    <div><button class="button">Sign up</button></div>
+                    <div><button class="button">Donate</button></div>
                 </div>
 
             </div>
