--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
     </div>
     <div class="footer">
-        Copyright logo The Odin Project 2022
+        Copyright &COPY; The Odin Project 2022
     </div>  
 </body>
 </html>
