--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="content">
         <div class="center">
             <div class="section-one">
-                <div class="heading">Your help is not limited to donations</div>
+                <div class="heading">Different ways to help.</div>
                 <div class="images-text">
                     <div class="img-heading">Visit them</div>
                     <div class="img-heading">Listen to them</div>
@@ -42,28 +42,28 @@
                     <div class="img-heading">Send in the animals</div>
                 </div>
                 <div class="images-text">
-                    <div><img class="image-two" src="visit.jpg" alt="Caravan"></div>
-                    <div><img class="image-two" src="listen.jpg" alt="Caravan"></div>
-                    <div><img class="image-two" src="fun.jpg" alt="Caravan"></div>
-                    <div><img class="image-two" src="pets.jpg" alt="Caravan"></div>
+                    <div class="border"><img class="image-two" src="visit.jpg" alt="visit"></div>
+                    <div class="border"><img class="image-two" src="listen.jpg" alt="listen"></div>
+                    <div class="border"><img class="image-two" src="fun.jpg" alt="fun"></div>
+                    <div class="border"><img class="image-two" src="pets.jpg" alt="pets"></div>
 
                 </div>
                 <div class="images-text">
-                    <div class="subtext">Did you know that many folks who live in senior care facilities have very few visitors? In fact, recent research suggests that approximately 6o percent of residents may have no visitors at all.</div>
-                    <div class="subtext">Older folks worry about the same things anyone under the age of 65 do, friendships, the stress of day-to-day life. They just might not have anyone to discuss their concerns with.</div>
-                    <div class="subtext">Kindness is important, but so is fun. Sometimes, we forget that older people like doing fun things just as much as anyone else.</div>
-                    <div class="subtext">Did you know that animals can help reduce stress? Just stroking the soft fur of a dog, cat or even guinea pig can make people feel a little bit better.</div>
+                    <div class="subtext">&ThickSpace; Did you know that many folks who live in senior care facilities have very few visitors? In fact, recent research suggests that approximately 6o percent of residents may have no visitors at all.</div>
+                    <div class="subtext">&ThickSpace; Older folks worry about the same things anyone under the age of 65 do, friendships, the stress of day-to-day life. They just might not have anyone to discuss their concerns with.</div>
+                    <div class="subtext">&ThickSpace; Kindness is important, but so is fun. Sometimes, we forget that older people like doing fun things just as much as anyone else.</div>
+                    <div class="subtext">&ThickSpace; Did you know that animals can help reduce stress? Just stroking the soft fur of a dog, cat or even guinea pig can make people feel a little bit better.</div>
                 </div>
             </div>
             <div class="section-two">
                 <div class="quote">I cannot do all the good that the world needs. But the world needs all the good that I can do.</div>
-                <div class="perso">JANA STANFIELD</div>
+                <div class="perso"> JANA STANFIELD</div>
             </div>
             <div class="section-three">
                 <div class="card">
                     <div>
                         <div>Call to action! It's time to make them happy!</div>
-                        <div>Donate by clicking that button</div>
+                        <div>Donate by clicking that button!</div>
                     </div>
                     <div><button class="button">Donate</button></div>
                 </div>
